--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                     <!-- Hidden fields for first and last name -->
                     <input type="hidden" id="first_name" name="first_name">
                     <input type="hidden" id="last_name" name="last_name">
+                    <input type="hidden" name="lead_source" value="Website">
                 
                     <div class="mb-3">
                         <input type="text" id="full_name" class="form-control" placeholder="Your Name*" required>
