--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <h3 class="fw-bold mb-4">Be a part of India's Top Rated University sucess</h3>
                 
                 <form id="leadForm" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DfL000005u2QA" method="POST">
-                    <input type="hidden" name="oid" value="00Dbf000001lfIT">
+                    <input type="hidden" name="oid" value="00DfL000005u2QA">
                     <input type="hidden" name="retURL" value="https://www.chitkara.edu.in/">
                 
                     <!-- Hidden fields for first and last name -->
