mapped values stste and program

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="col-md-5 p-4 d-flex justify-content-end"> <!-- Adjusted alignment -->
             <div class="w-100 p-4 shadow-lg rounded" 
                  style="max-width: 380px; background: white; margin-left: 15px; margin-right: 15px;">
-                <h3 class="fw-bold mb-4">Be a part of India's Top Rated University sucess</h3>
+                <h3 class="fw-bold mb-4">Be a part of India's Top Rated University upadted</h3>
                 
                 <form id="leadForm" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DfL000005u2QA" method="POST">
                     <input type="hidden" name="oid" value="00DfL000005u2QA">
@@ -420,7 +420,7 @@
                     </div>                   
                 
                     <div class="mb-3">
-                        <select id="00Nbf000001ATWP" name="00Nbf000001ATWP" class="form-select" required>
+                        <select id="00NfL00000JRTKw" name="00NfL00000JRTKw" class="form-select" required>
                             <option value="">Select State*</option>
                             <option value="Andaman and Nicobar (UT)">Andaman and Nicobar (UT)</option>
                             <option value="Andhra Pradesh">Andhra Pradesh</option>
